修复例子编译错误

--- a/examples/qtsshshell/mainwindow.ui
+++ b/examples/qtsshshell/mainwindow.ui
@@ -64,6 +64,13 @@
             </property>
            </widget>
           </item>
+          <item>
+           <widget class="QPushButton" name="pushclose">
+            <property name="text">
+             <string>断开</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
        </layout>
